--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "push-dir": "^0.4.1",
     "vue-carousel": "^0.18.0"
   },
   "devDependencies": {
     "@nuxtjs/svg": "^0.1.12",
     "fibers": "^5.0.0",
+    "gh-pages": "^3.1.0",
     "sass": "^1.32.12",
     "sass-loader": "^10.2.0"
   }
